--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <meta name="description" content="A responsive user registration app with pagination, custom tooltips, and API integration." />
+  <title>Test task</title>
   <link rel="icon" href="%PUBLIC_URL%/logo.svg" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
